--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   firebase_auth: ^6.1.2
   get_storage: ^2.1.1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
